--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: node_js
 install:
   - npm install -g yarn
   - yarn install
+node_js: ""
+  -"node"
+  -"8"
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - export PATH="$HOME/.yarn/bin:$PATH"
 cache:
   yarn: true
   directories:
