--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: node_js
 install:
   - npm install -g yarn
   - yarn install
-node_js:
-  -"node"
-  -"8"
+node_js: "7"
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
   - export PATH="$HOME/.yarn/bin:$PATH"
